# eol-cloth

./: .gitignore  CMakeLists.txt  README.md
src/: Collisions.cpp  Collisions.h  Collisions.hpp  cloth.cpp  cloth.hpp  constraint.cpp  constraint.hpp  force.cpp  force.h  force.hpp  obstacle.cpp  obstacle.h  obstacle.hpp  preprocessor.cpp  preprocessor.h  preprocessor.hpp  run.hpp  simulator.cpp  simulator.h  simulator.hpp  utility.cpp  utility.hpp
src/render/: shader.cpp  shader.h
src/shader/: mesh.fs  mesh.vs  phong.fs  world.fs
src/shapes/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp
